--- a/basiswebsite/styles/style.css
+++ b/basiswebsite/styles/style.css
@@ -8,8 +8,6 @@
 
 
 
-
-
 /*********************/
 /* CUSTOM PROPERTIES */
 /*********************/
@@ -22,10 +20,361 @@
 
 
 
-
 /****************/
 /* JOUW STYLING */
 /****************/
 
 /* jouw code */
+
+body {
+    background-color: #FEF8ED;
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+}
+
+h2{
+	display: none;
+}
+
+ul {
+    list-style: none;
+}
+
+header ul{
+    list-style: none;
+    margin-left: 2em;
+    padding: 0;
+    margin-bottom: 5em;
+}
+
+header nav:nth-of-type(2) ul{
+    text-align: right;
+    font-size: x-small;
+    margin-right: 2.5em;
+    margin-top: 1.8em;
+}
+
+header nav:nth-of-type(2) ul li{
+    margin-bottom: 1.9em;
+}
+
+header ul li {
+    margin-bottom: 0.75em;
+}
+
+header ul a{
+    color: black;
+}
+
+header p {
+    font-size: smaller;
+    text-align: center;
+    margin: 0;
+}
+
+header p:nth-of-type(1) {
+    margin-bottom: 0.3em;
+}
+
+header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 500;
+    background-color: #FEF8ED;
+    display: flex;
+    justify-content: center;
+}
+
+header div:nth-of-type(1){
+    z-index: 50;
+}
+
+button {
+    font-family: 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+    border-style: none;
+}
+
+a {
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+header img {
+    height: 2.5em;
+}
+
+header > a img {
+    margin-top: 0.5em;
+}
+
+header > div img {
+    height: 3em;
+    margin-top: 0.3em;
+}
+
+header > div:nth-of-type(1){
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #FEF8ED;
+    height: 3.5em
+}
+
+header > section:nth-of-type(1) {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    translate: 0% 200%;
+    transition: 0.5s;
+    background-color: #FEF8ED;
+    width: 100%;
+    height: 68%;
+}
+
+header > section:nth-of-type(1).open {
+    translate: 0% 36%;
+}
+
+header > section:nth-of-type(2) {
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    translate: 100% 0%;
+    transition: 0.5s;
+    background-color: #FEF8ED;
+    width: 100%;
+    height: 100%;
+    margin-top: 3.3em;
+
+}
+
+header > section:nth-of-type(2) > section{
+    height: 60%;
+    overflow-y: scroll;
+}
+
+header > section:nth-of-type(2) > section:nth-of-type(2) {
+    display: flex;
+    height: 4.5em;
+}
+
+header > section:nth-of-type(2) > a {
+    display: flex;
+    width: 75%;
+    font-size: 0.7em;
+    padding: 1.5em;
+    text-align: center;
+}
+
+header > section:nth-of-type(2) > section:nth-of-type(2) p{
+    margin-top: 3em;
+    margin-right: 5em;
+    font-weight: bold;
+}
+
+header > section:nth-of-type(2) > section:nth-of-type(2) h3 {
+    margin-top: 3em;
+    margin-left: 5em;
+    font-weight: bold;
+}
+
+header > section:nth-of-type(2) section section{
+    display: flex;
+    margin-left: 1.5em;
+    margin-right: 2em;
+    margin-top: 1em;
+}
+
+header > section:nth-of-type(2) img{
+    order: 1;
+    width: 8em;
+    height: auto;
+}
+
+header > section:nth-of-type(2) div{
+    order: 2;
+    display: flex;
+    flex-direction: column;
+    margin-left: 1em;
+}
+
+header > section:nth-of-type(2) div p{
+    margin-left: 0;
+    margin-top: 0.4em;
+    text-transform: uppercase;
+}
+
+header > section:nth-of-type(2) button{
+    border: none;
+    margin-bottom: 0.5em;
+    padding: 0;
+    background-color: transparent;
+    order: 3;
+    margin-left: 0;
+    width: 4.2em;
+    margin-top: 1em;
+    font-size: 0.6em;
+    text-decoration: underline;
+}
+
+header > section:nth-of-type(2) h3{
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 0.8em;
+    order: 1;
+}
+
+header > section:nth-of-type(2) p{
+    order: 3;
+    margin-left: auto;
+    margin-top: 0.9em;
+    text-align: start;
+    order: 2;
+}
+
+header > section:nth-of-type(2).open {
+    translate: 0% 0%
+}
+
+header > section:nth-of-type(1) div {
+    margin-top: 3em;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+header > button{
+    background-color: transparent;
+    border-style: none;
+    margin-bottom: 1.4em;
+    font-weight: 500;
+    z-index: 51;
+}
+
+header section > a {
+    height: 2em;
+    box-shadow: none;
+    background-color: #98D5E6;
+    font-size: 0.8em;
+    border-radius: 2em;
+    border-style: none;
+    align-self: flex-end;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 3em;
+    padding-top: 0.5em;
+    padding-left: 1em;
+    padding-right: 1em;
+    text-decoration: none;
+    color: black;
+}
+
+header > button:nth-of-type(1){
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    margin-left: 2em;
+}
+
+header > button:nth-of-type(2){
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin-right: 2em;
+}
+
+main > div:nth-of-type(1){
+    background-color: rgb(54 31 15);
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    z-index: 499;
+    opacity: 0;
+    transition: opacity 2s ease;
+    display: none;
+}
+
+main > div:nth-of-type(1).open {
+    display: block;
+    opacity: 0.5; 
+}
+
+
+@media (width > 60em) {
+	header button {
+        margin-bottom: 2.2em;
+    }
+
+	header > button:nth-of-type(1) {
+        position: absolute;
+        order: -1;
+	}
+
+	header > button:nth-of-type(2) {
+		position: absolute;
+	}
+
+    header img {
+        height: 3em;
+    }
+
+    header > a img {
+        margin-top: 0.9em;
+        margin-bottom: 0.5em;
+    }
+
+    header > div img {
+        height: 4em;
+        margin-top: 0.3em;
+        margin-bottom: 0.5em;
+    }
+
+    header > div:nth-of-type(1) {
+        height: 4.5em;
+    }
+
+    header > section:nth-of-type(1) {
+        margin-top: 4.5em;
+        margin-bottom: 4.5em;
+        translate: -100% 0%;
+        width: 50%;
+        height: 100%;
+        z-index: 1;
+    }
+
+    header > section:nth-of-type(1).open {
+        translate: 0% 0%;
+    }
+
+    header > section:nth-of-type(2) {
+        margin-top: 4.5em;
+        margin-bottom: 4.5em;
+        width: 30em;
+        height: 100%;
+        z-index: 1;
+    }
+
+    header > section:nth-of-type(2).open {
+        translate: 0% 0%;
+    }
+}
+
+
+
+
+
+
 
